nexus-provisioning/kustomize-provisioning/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonatype-nexus-service
  labels:
    app: sonatype-nexus
    fullname: nexus-sonatype-nexus
    chart: sonatype-nexus-1.1.8
    release: nexus
    heritage: Helm
spec:
  ports:
  - name: nexus-service
    port: 8081
    targetPort: 8081
  selector:
    app: sonatype-nexus
    release: nexus
  type: ClusterIP
