nexus-provisioning/kustomize-provisioning/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
  labels: 
  annotations:
spec:
  host: null
  port:
    targetPort: nexus-service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sonatype-nexus-service
    weight: 100
  wildcardPolicy: None
